
VERSION 0.6.4cvs
================

2005-03-25  Vincent Richard  <vincent@vincent-richard.net>

 * mdn/*.{cpp|hpp}: added support for Message Disposition Notifications (MDN),
   as defined by RFC-3798 and RFC-1892. This is a very first implementation,
   API is subject to changes...

2005-03-24  Vincent Richard  <vincent@vincent-richard.net>

 * Added 'HACKING' file.

2005-03-23  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/POP3*: fixed incorrect message size. Fixed a bug in
   deleteMessages() when 'to == -1' and last message not being
   deleted (thanks to Stefan Uhrig).

 * SConstruct: fixed compilation/linking problem with g++ and X86-64 on
    static library: added -fPIC/-fpic in compiler flags.

 * messaging/POP3*: added notifications.

 * constants.{cpp|hpp}, contentTypeField.{cpp|hpp}: added support for
   content types and parameters defined in RFC-1892.

2005-03-17  Vincent Richard  <vincent@vincent-richard.net>

 * base.{cpp|hpp}: renamed 'MIME_VERSION' to 'SUPPORTED_MIME_VERSION'.

 * Added "Viewer" example in /examples/viewer: demonstrate the parsing
   capabilities of VMime and it can help when debugging...

2005-03-16  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed compilation problems on Solaris 9.

2005-03-15  Vincent Richard  <vincent@vincent-richard.net>

 * tests/parser/textTest.cpp: added more unit tests for 'text' class.

 * text.{cpp|hpp}, word.{cpp|hpp}: moved word parsing from 'text' class
   to 'word' class, which now inherits from 'component'.

2005-03-14  Vincent Richard  <vincent@vincent-richard.net>

 * removed singleton<> and singletonManager classes: useless and quite
   confusing in Doxygen-generated documentation.

2005-02-06  Vincent Richard  <vincent@vincent-richard.net>

 * mailboxList.{cpp|hpp}: dropped protected inheritance which was not
   appropriate for this type of composition.

2005-02-05  Vincent Richard  <vincent@vincent-richard.net>
