@@ -8,6 +8,8 @@ VERSION 0.6.4cvs
    as defined by RFC-3798 and RFC-1892. This is a very first implementation,
    API is subject to changes...
 
+ * Some fixes for Visual C++/Windows.
+
 2005-03-24  Vincent Richard  <vincent@vincent-richard.net>
 
  * Added 'HACKING' file.
